--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -481,10 +481,10 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
 <div class="book-card">
-        <a href="livros/OPianista.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/sargento.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
-            <img src="img/OPianista_.jpg" alt="O Alienista">
+            <img src="img/sargento.jpg" alt="O Alienista">
             <span class="badge">16+</span>
           </div>
         </a>
