--- a/paginario/livros/sargento.html
+++ b/paginario/livros/sargento.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>O Pianista — Władysław Szpilman</title>
+  <title>Memórias de um Sargento de Milícias — Manuel Antônio de Almeida</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { height: 100%; }
@@ -29,7 +29,7 @@
     .book-details {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: flex-start;
       padding: 2rem;
       background-color: #ffd093ff;
@@ -37,7 +37,13 @@
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(160, 54, 28, 0.93);
     }
-    .book-cover img { width: 300px; height: auto; border-radius: 8px; margin-right: 2rem; }
+    .book-cover img {
+      width: 300px;
+      height: auto;
+      border-radius: 8px;
+      margin-right: 2rem;
+      margin-left: 0;
+    }
     .book-info { max-width: 600px; }
     .book-info h1 { font-size: 2rem; margin-bottom: 0.5rem; }
     .book-info .author { font-style: italic; margin-bottom: 1rem; }
@@ -78,27 +84,26 @@
   <main>
     <section class="book-details">
       <div class="book-cover">
-        <img src="o-pianista.png" alt="O Pianista — Władysław Szpilman">
+        <img src="memorias-sargento.png" alt="Memórias de um Sargento de Milícias — Manuel Antônio de Almeida">
       </div>
       <div class="book-info">
-        <h1>O Pianista</h1>
-        <p class="author">Władysław Szpilman (Autor), Tomasz Barcinski (Tradutor)</p>
+        <h1>Memórias de um Sargento de Milícias</h1>
+        <p class="author">Manuel Antônio de Almeida</p>
         <p class="description">
-          Escrito logo após o fim da Segunda Guerra Mundial, <em>O Pianista</em> transmite um imediatismo devastador sobre a época.  
-          Szpilman narra sua vida no gueto de Varsóvia, a perda da família, a fuga e sua sobrevivência, revelando a polaridade do comportamento humano durante a guerra.  
-          Esta edição inclui prefácio inédito de Andrzej Szpilman e inspirou o filme homônimo de Roman Polanski, vencedor da Palma de Ouro e de três Oscars.
+          Memórias de um Sargento de Milícias apresenta uma galeria de personagens dos mais diferentes tipos: o menino malandro, a alcoviteira, o barbeiro, o compadre, a comadre, o mestre de cerimônias, a cigana...  
+          O protagonista é o malandro Leonardo, filho de Leonardo-Pataca e Maria-da-Hortaliça, que vive praticando travessuras e se envolvendo em situações engraçadas e inesperadas.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Record<br>
-          <strong>Data da Publicação:</strong> 12 fevereiro 2024<br>
-          <strong>Edição:</strong> 6ª<br>
+          <strong>Editora:</strong> Principis<br>
+          <strong>Data da Publicação:</strong> 11 fevereiro 2021<br>
+          <strong>Edição:</strong> Texto integral com questões de vestibular comentadas<br>
           <strong>Idioma:</strong> Português<br>
-          <strong>Número de páginas:</strong> 272
+          <strong>Número de páginas:</strong> 208
         </p>
 
         <div class="download-links">
-          <a href="o-pianista.epub">Baixar EPUB</a>
-          <a href="o-pianista.pdf">Baixar PDF</a>
+          <a href="memorias-sargento.epub">Baixar EPUB</a>
+          <a href="memorias-sargento.pdf">Baixar PDF</a>
         </div>
       </div>
     </section>
