--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -657,7 +657,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
 
 
          <div class="book-card">
-        <a href="livros/per.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/cartapero.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/per.png" alt="O Alienista">
@@ -761,7 +761,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
         <div class="book-card">
-        <a href="livros/aescrava.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/cartapero.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/acartapero.png" alt="O Alienista">
