--- a/paginario/livros/sargento.html
+++ b/paginario/livros/sargento.html
@@ -84,7 +84,7 @@
   <main>
     <section class="book-details">
       <div class="book-cover">
-        <img src="memorias-sargento.png" alt="Memórias de um Sargento de Milícias — Manuel Antônio de Almeida">
+        <img src="sargento.jpg" alt="Memórias de um Sargento de Milícias — Manuel Antônio de Almeida">
       </div>
       <div class="book-info">
         <h1>Memórias de um Sargento de Milícias</h1>
@@ -102,8 +102,8 @@
         </p>
 
         <div class="download-links">
-          <a href="memorias-sargento.epub">Baixar EPUB</a>
-          <a href="memorias-sargento.pdf">Baixar PDF</a>
+          <a href="sargento.epub">Baixar EPUB</a>
+          <a href="sargento.pdf">Baixar PDF</a>
         </div>
       </div>
     </section>
