--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -576,7 +576,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
         <a href="livros/osmiseraveis.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
-            <img src="img/os-miseraveis-14.jpg" alt="O Alienista">
+            <img src="img/71L28YvPobL._SY425_.jpg" alt="O Alienista">
             <span class="badge">16+</span>
           </div>
         </a>
