--- a/paginario/livros/odisseia.html
+++ b/paginario/livros/odisseia.html
@@ -165,8 +165,8 @@
         </p>
 
         <div class="download-links">
-          <a href="iliada.epub">Baixar EPUB</a>
-          <a href="odisseia.pdf">Baixar PDF</a>
+          <a href="DOC-20250823-WA0046. (1).epub">Baixar EPUB</a>
+          <a href="DOC-20250823-WA0046..pdf">Baixar PDF</a>
         </div>
       </div>
     </section>
