--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -699,7 +699,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
 
       
          <div class="book-card">
-        <a href="livros/per.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/lady.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/lady.jpg" alt="O Alienista">
@@ -709,7 +709,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
   <div class="book-card">
-        <a href="livros/amoreninha.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/Abby.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/Northanger Abbey _.jpg" alt="O Alienista">
@@ -719,7 +719,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
         <div class="book-card">
-        <a href="livros/aescrava.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/artepoetica.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/artepoetica.jpg" alt="O Alienista">
@@ -729,7 +729,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
         <div class="book-card">
-        <a href="livros/osventosruivantes.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/omercadodeveneza.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/mercador_de_veneza_.jpg" alt="O Alienista">
@@ -751,7 +751,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
   <div class="book-card">
-        <a href="livros/amoreninha.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/sofocles.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/sofocles.jpg" alt="O Alienista">
@@ -771,7 +771,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
         <div class="book-card">
-        <a href="livros/osventosruivantes.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/otristefim.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/otristefim.png" alt="O Alienista">
