--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -386,7 +386,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>Nova Fronteira</h2><br><br>
           <div class="cover-container">
             <img src="./img/trintaMelhores.png" alt="Seus Trinta Melhores Contos">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -416,7 +416,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>Companhia das Letras</h2><br>
           <div class="cover-container">
             <img src="./img/maoLuva.png" alt="A Mão e a Luva">
-            <span class="badge">12+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -436,7 +436,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>Companhia das Letras</h2><br>
           <div class="cover-container">
             <img src="./img/alienista.png" alt="O Alienista">
-            <span class="badge">14+</span>
+            <span class="badge">16+</span>
           </div>
         </a>
       </div>
@@ -466,7 +466,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2> Martin Claret</h2><br>
           <div class="cover-container">
             <img src="./img/RomeueJulieta.jpg" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -485,7 +485,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/sargento.jpg" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -526,7 +526,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/OGuarani.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">12+</span>
           </div>
         </a>
       </div>
@@ -536,7 +536,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/asviagens.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">10+</span>
           </div>
         </a>
       </div>
@@ -587,7 +587,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/adaoeeva.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -597,7 +597,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/odisseia.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -661,7 +661,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/per.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -671,7 +671,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/amoreninha.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -681,7 +681,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/aescrava.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -691,7 +691,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/osventosruivantes.jpg" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
@@ -741,7 +741,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
 
       
          <div class="book-card">
-        <a href="livros/per.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/macbethr.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/mac.png" alt="O Alienista">
@@ -765,7 +765,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/acartapero.png" alt="O Alienista">
-            <span class="badge">16+</span>
+            <span class="badge">14+</span>
           </div>
         </a>
       </div>
