--- a/paginario/livros/1984.html
+++ b/paginario/livros/1984.html
@@ -150,7 +150,7 @@
           Embora diligente e habilidoso, Winston odeia secretamente o Partido e sonha em se rebelar contra o Grande Irmão.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Principis<br>
+          <strong>Editora:</strong> Books & Coffee<br>
           <strong>Data da Publicação:</strong> 1 janeiro 2021<br>
           <strong>Edição:</strong> Texto integral traduzido do original em inglês<br>
           <strong>Idioma:</strong> Português<br>
