--- a/paginario/livros/DomQuixote.html
+++ b/paginario/livros/DomQuixote.html
@@ -93,7 +93,7 @@
           O vizinho Sancho Pança torna-se seu fiel escudeiro. Nenhum cavaleiro andante teve a ousadia de Dom Quixote, tampouco viveu suas aventuras e desventuras, que aqui são contadas de forma divertida e emocionante.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Moderna Literatura<br>
+          <strong>Editora:</strong> Círculo de Leitores<br>
           <strong>Data da Publicação:</strong> 6 agosto 2012<br>
           <strong>Edição:</strong> 1ª<br>
           <strong>Idioma:</strong> Português<br>
