--- a/paginario/livros/Oslusiadas.html
+++ b/paginario/livros/Oslusiadas.html
@@ -89,7 +89,7 @@
           A edição de Alexei Bueno é meticulosamente revisada, com mais de 1.200 notas explicativas, estrofes outrora omitidas e ilustrações marcantes, tornando a leitura uma imersão profunda na epopeia que forjou Portugal.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Nova Fronteira<br>
+          <strong>Editora:</strong> L&PM<br>
           <strong>Data da Publicação:</strong> 15 setembro 2020<br>
           <strong>Edição:</strong> 1ª<br>
           <strong>Idioma:</strong> Português<br>
