--- a/paginario/livros/RomeueJulieta.html
+++ b/paginario/livros/RomeueJulieta.html
@@ -90,7 +90,7 @@
           a história atemporal e uma das tragédias mais conhecidas da literatura.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Principis<br>
+          <strong>Editora:</strong> Clube do Autor<br>
           <strong>Data da Publicação:</strong> 22 abril 2021<br>
           <strong>Edição:</strong> Texto integral adaptado em prosa<br>
           <strong>Idioma:</strong> Português<br>
