--- a/paginario/livros/maoeluva.html
+++ b/paginario/livros/maoeluva.html
@@ -153,7 +153,7 @@
           delineando um quadro de comportamentos marcados pelo orgulho e pelo amor.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Martin Claret<br>
+          <strong>Editora:</strong> L&PM Pocket<br>
           <strong>Data de Publicação:</strong> 21 julho 2025<br>
           <strong>Edição:</strong> Integral<br>
           <strong>Idioma:</strong> Português<br>
