--- a/paginario/livros/oalienista.html
+++ b/paginario/livros/oalienista.html
@@ -152,7 +152,7 @@
           Lúcido ou louco? Médico ou monstro? Só ele poderá responder — sobre os outros e, talvez, sobre si mesmo.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Camelot Editora<br>
+          <strong>Editora:</strong> L&PM<br>
           <strong>Data da Publicação:</strong> 16 setembro 2021<br>
           <strong>Edição:</strong> 1ª<br>
           <strong>Idioma:</strong> Português<br>
