--- a/paginario/livros/sargento.html
+++ b/paginario/livros/sargento.html
@@ -90,7 +90,7 @@
           O protagonista é Leonardo, filho de Leonardo-Pataca e Maria-da-Hortaliça, um jovem malandro que se envolve em aventuras cômicas e situações inesperadas.
         </p>
         <p class="publication-info">
-          <strong>Editora:</strong> Principis<br>
+          <strong>Editora:</strong> Paulus<br>
           <strong>Data da Publicação:</strong> 11 fevereiro 2021<br>
           <strong>Edição:</strong> Texto integral com questões de vestibular comentadas<br>
           <strong>Idioma:</strong> Português<br>
