--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -343,7 +343,7 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
   
   <nav id="side-menu" class="side-menu">
     <div class="close-icon">
-      <img src="img/component 1.svg" alt="Fechar Menu"/>
+      <img src="img/lupa.png" alt="Fechar Menu"/>
     </div>
     <ul>
       <li><a href="inicio.html" style="color: antiquewhite;">Página Inicial</a></li>
@@ -542,10 +542,10 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       </div>
 
       <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/amoreamizade.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
-            <img src="img/cemanosdesolidao.png" alt="O Alienista">
+            <img src="img/amoreamizade.jpg" alt="Amor e Amizade">
             <span class="badge">16+</span>
           </div>
         </a>
