--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -282,15 +282,16 @@ header input[type="text"] {
   width: 250px;
 }
 #myInput {
-  background-image: url('img/searchicon.png'); /* coloque o ícone que quiser */
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 100%;
+  width: 250px;
   font-size: 16px;
-  padding: 12px 20px 12px 40px;
+  padding: 12px 20px 12px 40px; /* espaço à esquerda para a lupa */
   border: 1px solid #ddd;
-  margin-bottom: 20px;
   border-radius: 4px;
+  margin-bottom: 20px;
+  background-image: url('img/magnifying-glass-1976105_1280.png'); /* sua lupa */
+  background-position: 10px center; /* posição da lupa */
+  background-repeat: no-repeat;
+  background-size: 18px 18px; /* deixa pequena */
 }
 
 #myInput:focus {
@@ -310,8 +311,6 @@ header input[type="text"] {
 
  <div class="search-container">
   <input type="text" id="myInput" placeholder="Pesquisar Editora..." title="Digite o nome da Editora">
-  <button class="search-btn">
-    <img src="img/lupa.png" alt="Pesquisar" />
   </button>
 </div>
 </header>
