--- a/paginario/faixaetaria.html
+++ b/paginario/faixaetaria.html
@@ -310,7 +310,7 @@ header input[type="text"] {
   <h1>FILTRO DE PESQUISA</h1>
 
  <div class="search-container">
-  <input type="text" id="myInput" placeholder="Pesquisar Gênero..." title="Digite o Gênero">
+  <input type="text" id="myInput" placeholder="Pesquisar Faixa Etária..." title="Digite Faixa Etária">
   </button>
 </div>
 </header>
@@ -365,14 +365,14 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
       <div class="icon-wrapper">
         <img src="./img/paginario.png" alt="Logo Paginário" class="book-icon" style="width: 50px; height: 50px;">
       </div>
-      <h1>GÊNERO</h1>
+      <h1>FAIXA ETÁRIA</h1>
     </div>
 
     <div class="book-grid">
     
       <div class="book-card">
         <a href="livros/memoriaspostumas.html" style="text-decoration: none; color: inherit;">
-          <h2>Memórias Póstumas de Brás Cubas</h2><br>
+          <h2>16+</h2><br>
           <div class="cover-container">
             <img src="./img/memoriasPostumas.png" alt="Memórias Póstumas de Brás Cuba">
             <span class="badge">16+</span>
