--- a/paginario/livros/memoriaspostumas.html
+++ b/paginario/livros/memoriaspostumas.html
@@ -95,6 +95,31 @@
       background-color: #7a3e1cff;
     }
 
+    /* Estrelas de avaliação */
+    .avaliacao {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      margin-top: 15px;
+      gap: 5px;
+    }
+
+    .estrela {
+      font-size: 40px; /* tamanho maior */
+      color: #ccc;
+      cursor: pointer;
+      transition: color 0.2s;
+    }
+
+    .estrela.selecionada {
+      color: gold;
+    }
+
+    #nota {
+      margin-top: 8px;
+      font-weight: bold;
+    }
+
     .main-footer {
       text-align: center;
       padding: 14px 0;
@@ -102,6 +127,31 @@
       color: #fff;
       font-size: 0.9rem;
       flex-shrink: 0;
+    }
+
+    /* Avaliação por estrelas */
+    .avaliacao {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      margin-top: 15px;
+      gap: 5px;
+    }
+
+    .estrela {
+      font-size: 40px;
+      color: #ccc;
+      cursor: pointer;
+      transition: color 0.2s;
+    }
+
+    .estrela.selecionada {
+      color: gold;
+    }
+
+    #nota {
+      margin-top: 8px;
+      font-weight: bold;
     }
 
     .main-footer a {
@@ -126,6 +176,13 @@
       .book-info {
         max-width: 100%;
         text-align: center;
+      }
+
+      .avaliacao {
+        justify-content: center;
+      }
+         .avaliacao {
+        justify-content: center;
       }
     }
   </style>
@@ -165,7 +222,28 @@
           <a href="memorias-postumas.epub">Baixar EPUB</a>
           <a href="memorias-postumas.pdf">Baixar PDF</a>
         </div>
+
+        <!-- Avaliação por estrelas -->
+        <div class="avaliacao">
+        <p>Avaliação:</p>
+          <span class="estrela" data-value="1">&#9733;</span>
+          <span class="estrela" data-value="2">&#9733;</span>
+          <span class="estrela" data-value="3">&#9733;</span>
+          <span class="estrela" data-value="4">&#9733;</span>
+          <span class="estrela" data-value="5">&#9733;</span>
+        </div>
+        <p id="nota"></p>
       </div>
+              <!-- Avaliação por estrelas -->
+        <div class="avaliacao">
+          <p>Avaliação:</p>
+          <span class="estrela" data-value="1">&#9733;</span>
+          <span class="estrela" data-value="2">&#9733;</span>
+          <span class="estrela" data-value="3">&#9733;</span>
+          <span class="estrela" data-value="4">&#9733;</span>
+          <span class="estrela" data-value="5">&#9733;</span>
+        </div>
+        <p id="nota"></p>
     </section>
   </main>
 
@@ -174,5 +252,26 @@
     <a href="#">Termos de Uso</a> |
     <span>Todos os direitos reservados (BR)</span>
   </footer>
+
+  <script>
+    const estrelas = document.querySelectorAll('.estrela');
+    const notaTexto = document.getElementById('nota');
+    let nota = 0;
+
+    estrelas.forEach((estrela, index) => {
+      estrela.addEventListener('click', () => {
+        nota = index + 1;
+        notaTexto.textContent = "Você avaliou com " + nota + " estrela(s)";
+        
+        estrelas.forEach((e, i) => {
+          if (i < nota) {
+            e.classList.add('selecionada');
+          } else {
+            e.classList.remove('selecionada');
+          }
+        });
+      });
+    });
+  </script>
 </body>
 </html>
