--- a/paginario/livros/orgulhoepreconceito.html
+++ b/paginario/livros/orgulhoepreconceito.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Livro de Soror Saudade — Florbela Espanca</title>
+  <title>Livro Orgulho e Preconceito - Jane Austen </title>
   <style>
     /* Reset de estilos */
     * {
