--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -251,7 +251,7 @@ header h1 {
     .main-footer {
       text-align: center;
       padding: 14px 0;
-      background-color: #a56e1a;
+  background: #86541c;
       color: #fff;
       font-size: 0.9rem;
     }
@@ -783,8 +783,8 @@ document.getElementById("myInput").addEventListener("keyup", myFunction);
   </section>
 <br>
   <footer class="main-footer">
-    <a href="#">Política de Privacidade</a> |
-    <a href="#">Termos de Uso</a> |
+    <a href="politicaprivacidade.html">Política de Privacidade</a> |
+    <a href="politicaprivacidade.html">Termos de Uso</a> |
     <span>Todos os direitos reservados (BR)</span>
   </footer>
 
