--- a/paginario/politicaprivacidade.html
+++ b/paginario/politicaprivacidade.html
@@ -88,7 +88,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        background-color: #a56e1a;  
+  background: #86541c; 
         color: #fff;
         padding: 12px 20px;
     }
@@ -119,7 +119,7 @@
     .main-footer {
         text-align: center;
         padding: 14px 0;
-        background-color: #a56e1a;
+  background: #86541c;
         color: #fff;
         font-size: 0.9rem;
         position: fixed;
