--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Editora – Filtro de Pesquisa</title>
+  <title>Livros – Filtro de Pesquisa</title>
   <link rel="stylesheet" href="img">
   <style>
     * {
